Forum fix. Write new topic was wrapped into hidden write block.

--- a/src/write/write.scss
+++ b/src/write/write.scss
@@ -1,7 +1,7 @@
 @import "../mixins";
 
 // Forum
-#content td.write,
+#content td.write:not(:has(.write-link)),
 // Vocabulary
 #content dl.write {
   overflow: hidden !important;
@@ -114,7 +114,7 @@
 }
 
 // Repositioning for posts and comments when write block is focused
-body:has(.write:focus-within) #content .minwidth_holyhack {
+body:has(.write:focus-within:not(:has(.write-link))) #content .minwidth_holyhack {
   @include content-reposition-focused("landscape");
 }
 
